# rfiles

./: .gitignore  Cargo.toml  todo.txt
src/: actions.rs  draw.rs  event.rs  files.rs  handler.rs  lib.rs  main.rs  preview.rs  render  tui.rs
src/file_manager/: config.rs  entry.rs  mod.rs  pane.rs  state.rs  tui.rs
src/file_manager/colours/: mod.rs
src/file_manager/fs/: metadata.rs  mod.rs  operations.rs
src/file_manager/ui/: events.rs  mod.rs  popup_input.rs  render.rs
src/utils/: mod.rs
