[package]
name = "rfiles"
version = "0.1.0"
edition = "2024"

[dependencies]
ansi-to-tui = "7.0.0"
anyhow = "1.0.97"
chrono = "0.4.40"
crossterm = { version = "0.28.1", features = ["event-stream"] }
devicons = "0.6.12"
futures = "0.3.31"
ratatui = "0.29.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
signal-hook = "0.3.17"
tokio = { version = "1.44.0", features = ["full"] }
tracing = "0.1.41"

[profile.dev.build-override]
opt-level = 3

